AMP-30654 fixes the deprecated library. Fix missing gazetteer importer file